--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<a href="/">To page</a>
+<html>
+    <head>
+        <title>Astro</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    </head>
+
+    <body>
+        <div id="landing-body-content" class="d-flex align-items-center position-relative vh-100 col text-center">
+            <a class="btn btn-lg btn-primary" href="/recipes">Show recipes</a>
+        </div>
+
+    </body>
+</html>
